testsuite/tests/properties/invalid_n_propgate/common.lkt
from lexer_example import foo_lexer
from test import BarNode

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(BarNode("example") | BazNode("example"))
}

class FooNode implements Node[FooNode] {
    ref_var: LogicVar
    type_var: LogicVar
}

class BazNode: FooNode {
    # Make the properties accept a variying number of entities. Use multiple
    # entity derived types, as they should all be accepted. Also add a default
    # argument somewhere, which should not matter when matching the number of
    # logic variables.

    @ignored fun prop1(): Entity[BazNode] = self

    @ignored fun prop2(
        @ignored e1: Entity[FooNode],
        @ignored b: Bool = true
    ): Entity[BazNode] = self

    @ignored fun prop3(
        @ignored e1: Entity[BazNode],
        @ignored e2: Entity[BarNode]
    ): Entity[BazNode] = self

    @ignored fun prop4(
        @ignored e1: Array[Entity[BazNode]],
        @ignored b: Bool = true
    ): Entity[BazNode] = self
}
